[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foldtree"
dynamic = ["entry-points"]
version = "1.1.1rc1"
authors = [
  { name="Dave Moi", email="dmoi@unil.ch" },
  { name="Mauricio Langlieb", email="dmoi@unil.ch" },
  { name="Nikolai Romashchenko", email="nikolai.romashchenko@unil.ch" },
]

description = "Foldtree creates phylogenetic trees from protein structures."
readme = "README.md"

license = { file="LICENSE" }

requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DessimozLab/foldtree"
"Bug Tracker" = "https://github.com/DessimozLab/foldtree/issues"
"Docs" = "https://dessimozlab.github.io/fold_tree/"


[project.scripts]
foldtree = "foldtree.foldtree:cli"
pyfoldtree = "foldtree.pyfoldtree:main"
apisearch = "foldtree.foldseek_remote_search:main"